Improved documentation a bit. Added Validation library

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.ansill.validation</groupId>
+            <artifactId>validation</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>3.0.0</version>
